Fix: Image cut off in landscape mode

--- a/style.css
+++ b/style.css
@@ -57,9 +57,7 @@ body {
 
 .flex {
     display: flex;
-    align-items: center;
     flex-direction: column;
-    justify-content: center;
 }
 
 main {
@@ -67,33 +65,40 @@ main {
     border-radius: 20px;
     padding: 1em;
     text-align: center;
-    width: 20em;
+    max-width: 20em;
+    min-height: fit-content;
+    margin: auto
 }
 
 img {
     border-radius: 10px;
 }
 
+div.flex {
+    padding: 1em 0.5em;
+}
+
 h1 {
     color: hsl(218, 44%, 22%);
-    font-size: 1.4em;
+    font-size: 1.4rem;
     font-weight: 700;
-    margin: 1em 0.5em 0.5em;
+    margin-bottom: 0.7em;
+    margin-top: 0.3em;
 }
 
 h1,
 p {
-    line-height: 1.3;
+    line-height: 1.2;
 }
 
 p {
     color: hsl(220, 15%, 55%);
-    margin: 0 0.5em 1em;
 }
 
 .attribution {
-    font-size: 0.7em;
+    font-size: 0.7rem;
     margin-top: 1em;
+    text-align: center;
 }
 
 .attribution a {
